# resona

./: .gitignore  API_REVIEW.md  AUDIT_VERIFIED_2026-06-26.md  CHANGELOG.md  COMPLEXITY.md  COOKBOOK.md  EPIC.md  EPIC2.md  EPIC3.md  FRONTIER.md  LICENSE  MIGRATION.md  NOVELTY.md  PORTING_PLAN.md  README.md  RESONA_CORRECTNESS_AUDIT.md  THEORY.md  pyproject.toml
docs/: README.md  composing-operators.md  inverse-problems.md  lifting-nonlinear.md  measuring-difficulty.md  precision-and-defects.md  reading-spectra.md  solving-and-evolving.md  tour.md
examples/: README.md  anderson_localization.py  certified_logdet.py  covariance_cleaning.py  defect_spectroscopy.py  grand_tour.py  image_anomaly.py  inverse_spectral.py  killer_tasks.py  nonlinear_pde.py  signals.py  spectra_to_machine_precision.py  spike_detection.py  tracy_widom_edge.py
opfft/: __init__.py  spectral.py
resona/: __init__.py  beta.py  brown.py  cloud.py  cloud_flow.py  cost.py  defect.py  flow.py  free.py  lift.py  solve.py  spectral.py  subordination.py  thermal.py  wkernel.py
tests/: test_audit_defect_cost.py  test_audit_lift_thermal.py  test_audit_nonhermitian.py  test_audit_solve_misc.py  test_audit_spectral.py  test_brown.py  test_certified.py  test_cloud_flow.py  test_engines.py  test_gpu_dispatch.py  test_hardness_tools.py  test_sockets.py  test_solve.py  test_spectral.py  test_theory.py  test_v14_surface.py  test_worlds.py
theory/: burgers_shock.py  catastrophe_hardness.py  critical_window.py  extraction_law.py  free_clt.py  free_prob_bridge.py  freeness_criterion.py  hardness_exponents.py  (+7 more)
(+60 files in other folders)
