[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "resona"
version = "1.3.0"
description = "The FFT of operators: probe, compose, read — matrix-free spectral computation with a built-in cost law."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dmitry Sierikov" }]
keywords = [
    "spectral", "operator", "matrix-free", "stochastic-lanczos-quadrature",
    "free-probability", "density-of-states", "log-determinant", "trace-estimation",
    "krylov", "numerical-linear-algebra",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.20", "scipy>=1.7"]

[project.optional-dependencies]
test = ["pytest>=7"]
exact = ["mpmath>=1.2"]   # resona.solve.catastrophe_solve (extended-precision roots)

[project.urls]
Homepage = "https://github.com/dimaq12/resona"
Source = "https://github.com/dimaq12/resona"

[tool.setuptools.packages.find]
where = ["."]
include = ["resona*"]
